--- a/package.json
+++ b/package.json
@@ -1,25 +1,34 @@
 {
-	"name": "dhash",
-	"version": "0.0.3",
-	"description": "Compute difference hash of image",
-	"keywords": ["image", "hash", "dhash", "compare", "comparison", "picture", "photo", "algorithm"],
-	"main": "index.js",
-	"scripts": {
-		"test": "node node_modules/mocha/bin/mocha test/"
-	},
-	"author": "Richard van der Dys <richard.vanderdys@gmail.com> (http://richardvanderdys.com/)",
-	"license": "MIT",
-	"dependencies": {
-		"gm": "latest",
-		"png-js": "latest",
-		"stream-to-array": "latest"
-	},
-	"devDependencies": {
-		"mocha": "latest",
-		"should": "latest"
-	},
-	"repository" : {
-		"type" : "git",
-		"url" : "https://github.com/dijs/dhash.git"
-	}
+  "name": "dhash",
+  "version": "0.0.3",
+  "description": "Compute difference hash of image",
+  "keywords": [
+    "image",
+    "hash",
+    "dhash",
+    "compare",
+    "comparison",
+    "picture",
+    "photo",
+    "algorithm"
+  ],
+  "main": "index.js",
+  "scripts": {
+    "test": "node node_modules/mocha/bin/mocha test/"
+  },
+  "author": "Richard van der Dys <richard.vanderdys@gmail.com> (http://richardvanderdys.com/)",
+  "license": "MIT",
+  "dependencies": {
+    "gm": "^1.18.1",
+    "png-js": "^0.1.1",
+    "stream-to-array": "^2.0.2"
+  },
+  "devDependencies": {
+    "mocha": "^2.2.5",
+    "should": "^7.0.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dijs/dhash.git"
+  }
 }
